--- a/myStyles.css
+++ b/myStyles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Code&display=swap');
 
 mark {
   background-color: #ffff88;
@@ -11,6 +10,8 @@ h-l {
 }
 
 
-pre, code {
-  font-family:"Fira Code", "Monaco", monospace;
+@import url('https://fonts.googleapis.com/css?family=Fira+Code&display=swap');
+
+pre code {
+  font-family:"Fira Code", "Monaco", monospace !important;
 }
