--- a/myStyles.css
+++ b/myStyles.css
@@ -25,3 +25,9 @@ div.iframe-container {
 iframe.d3-figure {
   border: none;
 }
+
+
+/* Hide slide number on title slide */
+.title-slide .remark-slide-number {
+  display: none;
+}
